EPUB: Fix invisible content in paginated mode in Safari
https://forums.zotero.org/discussion/118219/bug-zotero-web-not-showing-epub-text-properly

--- a/src/dom/epub/stylesheets/layout/_paginated.scss
+++ b/src/dom/epub/stylesheets/layout/_paginated.scss
@@ -75,6 +75,13 @@
 		&.hidden {
 			display: none;
 		}
+
+		:root.is-safari & {
+			// 'contain: paint' in a multi-column layout slows Safari to a crawl
+			// and causes content to disappear
+			contain: layout;
+			contain: layout style;
+		}
 	}
 }
 
